# session_update_baseline_project

./: .gitignore  AGENT_UPLOAD_GUIDE.md  EXCLUDED_ARTIFACTS.md  PROJECT_FILE_MANIFEST.txt  PROJECT_FILE_SHA256SUMS.txt  PROJECT_HISTORY.md  README.md
session_update_baseline/: CMakeLists.txt  DESIGN.md  README.md  base1.1_existing_results_check_20260705.md  base1.1_mode_a_single_session.md  base1.2_mode_b_cross_session.md  base1.3_nss_dataset_drive.md  base1.md  base1_eval_summary.md  base1_loop_summary.md
session_update_baseline/app/: audit_base1_mesh_errors.cpp  run_session_update_baseline.cpp
session_update_baseline/docker/: compose.yaml
session_update_baseline/ports/: README.md
session_update_baseline/ports/panoptic_core/: CMakeLists.txt
session_update_baseline/rounds/base12_ours_panmap_policy_round01/: ROUND_REPORT.md  standard_eval_summary.csv
session_update_baseline/rounds/base12_panoptic_flat_round01/: DATASET_AUDIT.md  ROUND_REPORT.md
session_update_baseline/rounds/base12_pocd_panmap_round01/: ROUND_REPORT.md  ablation_summary.csv  changed_object_metrics.csv  changed_object_summary_final.csv  ours_with_prior_keep_unmatched_mesh_metrics.csv  ours_with_prior_pruned_no_copy_mesh_metrics.csv  ours_with_prior_restore_only_mesh_metrics.csv  standard_eval_summary.csv  (+7 more)
session_update_baseline/runs/: round00_existing_metrics.csv  round00_existing_metrics.md
session_update_baseline/scripts/: extract_khronos_eval_metrics.py  prepare_base1_khronos_eval_dir.sh  run_base1_ablation_sweep.sh  run_official_eval_for_dir.sh  run_session_update_baseline.sh
(+769 files in other folders)
